--- a/doc/thesis/analysis/ea.tex
+++ b/doc/thesis/analysis/ea.tex
@@ -36,6 +36,8 @@ After viewing the results from the DE, and PSO experiments in Section~\ref{sec:p
 	\label{table:ea-de-results}
 \end{table}
 
+Comparing the results of the DE, and PSO with the results of the GA, and RGA one would notice that the search algorithms that operated on a continuous space performed better than the discrete algorithms.
+
 The DE, and PSO experiments were initially run using a variety of different system parameters. The results shown in Table~\ref{table:ea-de-results} and Table~\ref{table:ea-pso-results} used the following tuning parameters. The PSO algorithm has three tunable user defined parameters: inertia, social and cognitive. Based on the work performed in the research paper~\cite{eberhart2000comparing} the parameters social and cognitive was set to 1.496180, while inertia was set to 0.729844. The DE algorithm has two tunable user defined parameters: differential weight, and crossover probability. Several different combinations of values for differential weight, and crossover probability were used but the parameters that produced the best results were from a research paper from Hvass Laboratories~\cite{pedersen2010good} where differential weight was set to 0.4717, and crossover probability was set to 0.8803.
 
 \begin{figure*}
