--- a/doc/thesis/background/ga.tex
+++ b/doc/thesis/background/ga.tex
@@ -42,7 +42,7 @@ N-point crossover works by randomly selecting N cutting points and swapping the 
 
 \begin{figure}[H]
   \centering
-  \begin{tabu}{ | l | l | l |[2pt] l | l | l |[2pt] l | l | l | }
+  \begin{tabu}{ | p{1.5cm} | l | l |[2pt] l | l | l |[2pt] l | l | l | }
     \hline
     Parent 1 & \textcolor{blue}{0} & \textcolor{blue}{1} & \textcolor{blue}{1} & \textcolor{blue}{0} & \textcolor{blue}{1} & \textcolor{blue}{0} & \textcolor{blue}{1} & \textcolor{blue}{0} \\ \hline
     Parent 2 & \textcolor{red}{0} & \textcolor{red}{0} & \textcolor{red}{1} & \textcolor{red}{0} & \textcolor{red}{0} & \textcolor{red}{1} & \textcolor{red}{0} & \textcolor{red}{0} \\ \hline
@@ -52,7 +52,7 @@ N-point crossover works by randomly selecting N cutting points and swapping the 
   \line(1,0){250}
   \\
   \vspace{3 mm}
-  \begin{tabu}{ | l | l | l |[2pt] l | l | l |[2pt] l | l | l | }
+  \begin{tabu}{ | p{1.5cm} | l | l |[2pt] l | l | l |[2pt] l | l | l | }
     \hline
     Child 1 & \textcolor{red}{0} & \textcolor{red}{0} & \textcolor{blue}{1} & \textcolor{blue}{0} & \textcolor{blue}{1} & \textcolor{red}{1} & \textcolor{red}{0} & \textcolor{red}{0} \\ \hline
     Child 2 & \textcolor{blue}{0} & \textcolor{blue}{1} & \textcolor{red}{1} & \textcolor{red}{0} & \textcolor{red}{0} & \textcolor{blue}{0} & \textcolor{blue}{1} & \textcolor{blue}{0} \\ \hline
@@ -65,7 +65,7 @@ N-point crossover works by randomly selecting N cutting points and swapping the 
 
 \begin{figure}[H]
   \centering
-  \begin{tabular}{ | l | l | l | l | l | l | l | l | l | }
+  \begin{tabular}{ | p{2cm} | l | l | l | l | l | l | l | l | }
     \hline
     Individual & 0 & 1 & 1 & 0 & 1 & 0 & 1 & 0 \\
     \hline
@@ -75,7 +75,7 @@ N-point crossover works by randomly selecting N cutting points and swapping the 
   \line(1,0){250}
   \\
   \vspace{3 mm}
-  \begin{tabular}{ | l | l | l | l | l | l | l | l | l | }
+  \begin{tabular}{ | p{2cm} | l | l | l | l | l | l | l | l | }
     \hline
     Mutant & 0 & 1 & 1 & \textcolor{red}{1} & 1 & 0 & 1 & 0 \\
     \hline
