--- a/doc/thesis/conclusion.tex
+++ b/doc/thesis/conclusion.tex
@@ -2,4 +2,6 @@
 
 This thesis studies the use of evolutionary algorithms on the structure refinement problem using EXAFS spectra comparison. The GA, RGA, PSO, and DE algorithms were each able to find improved candidate solutions for the oxygen-evolving complex over previous research.
 
+continuous space search problems better suited for this problem
+
 This work was primarily a study of the computational side of the structure refinement problem. The atomic structures produced in this work were only validated against the experimental EXAFS spectrum. A biologist will still have to verify which candidate solutions are potential solutions to the problem. Future research into using evolutionary algorithms on the structure refinement problem would benefit from including force field calculations on the candidate solutions. A multi-objective approach where each atomic structure's EXAFS spectrum is refined as well as the potential energy of the atomic structure is minimized should be investigated.
