--- a/doc/thesis/methodology/problem-encoding.tex
+++ b/doc/thesis/methodology/problem-encoding.tex
@@ -1,4 +1,5 @@
 \section{Problem Encoding}
+\label{sec:problem-encoding}
 
 A molecule consists of a number of atoms. Each of these atoms has its own 3-dimensional position within the molecule. For the structure refinement problem the individual 3-dimensional position values are not important. The important information about this problem is how the atoms are positioned with respect to each other. Two different forms of representation were used in this work. For each of these representations the number values are shown in Angstroms (\AA).
 
