--- a/doc/thesis/previous-work.tex
+++ b/doc/thesis/previous-work.tex
@@ -1,8 +1,9 @@
 \chapter{Previous Research}
 
-Before we can begin explaining the techniques we used in the next chapter it is necessary that we explain related research in this field.
+Before we can begin explaining the techniques we used in the next chapter it is necessary that we explain related research in this field. Section~\ref{sec:prev-work} reviews the previous work that has been done on the structure refinement of OEC and Section~\ref{sec:prev-app} reviews research that has been performed on struture refinement in other applications.
 
 \section{Quantum Mechanics/Molecular Mechanics}
+\label{sec:prev-work}
 
 In previous work~\cite{sproviero2008model} the authors used density functional theory quantum mechanics/molecular mechanics (DFT-QM/MM) and refined quantum mechanics/molecular mechanics (R-QM/MM) to find close approximations of the experimental EXAFS spectrum of OEC in S$_{1}$. The EXAFS spectrum used in their calculations was at a poorer resolution compared to the spectra used in the experiments in our work.
 
@@ -15,6 +16,7 @@ The researchers speculated that even though the R-QM/MM technique was able to ge
 Later in ~\cite{luber2011s1} the same research group repeated their original experiments performed in ~\cite{sproviero2008model} with updated X-ray diffraction (XRD) data that had a resolution of 1.9\AA. They has success rerunning the DFT-QM/MM experiment followed by the R-QM/MM experiment but still had the same speculations about remaining in a local solution.
 
 \section{Previous Applications}
+\label{sec:prev-app}
 
 In this section, we look at previous applications of GA, DE, and PSO to biological problems, specifically concentrating on those that attempt to identify structures.
 
