--- a/doc/thesis/experimental-design/ga.tex
+++ b/doc/thesis/experimental-design/ga.tex
@@ -32,16 +32,15 @@ Each GA type was given a random selection of individuals from the population gen
 
 \begin{table}
 	\centering
-	\begin{tabular}{ | >{\bfseries}c | c | c | c | c | c | c | }
+	\begin{tabular}{ | >{\bfseries}c | c | c | c | c | c | c | c | c | }
 		\hline
-		Experiment Set & 1 & 2 & 3 & 4 & 5 & 6 \\ \hline
-		Crossover Rate & 80 & 80 & 80 & 80 & 70 & 70 \\ \hline
-		Mutation Rate & 20 & 20 & 20 & 20 & 30 & 30 \\ \hline
-		Elitism & True & True & True & True & True & True \\ \hline
-		% Generations & 67 & 81 & 107 & 124 & 67 & 81 \\ \hline
-		Population Size & 50 & 50 & 50 & 50 & 50 & 50 \\ \hline
-		Convergence Rate & 10 & 5 & 10 & 5 & 5 & 10 \\ \hline
-		Number of Restarts & 3 & 3 & 5 & 5 & 5 & 5 \\ \hline
+		Experiment Set & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 \\ \hline
+		Crossover Rate & 80 & 80 & 80 & 80 & 70 & 70 & 70 & 70 \\ \hline
+		Mutation Rate & 20 & 20 & 20 & 20 & 30 & 30 & 30 & 30 \\ \hline
+		Elitism & True & True & True & True & True & True & True & True \\ \hline
+		Population Size & 50 & 50 & 50 & 50 & 50 & 50 & 50 & 50 \\ \hline
+		Convergence Rate & 10 & 5 & 10 & 5 & 10 & 5 & 10 & 5 \\ \hline
+		Number of Restarts & 3 & 3 & 5 & 5 & 3 & 3 & 5 & 5 \\ \hline
 	\end{tabular}
 	\caption{System parameters for the RGA runs}
 	\label{table:viability-rga}
