--- a/doc/thesis/experimental-design/subset.tex
+++ b/doc/thesis/experimental-design/subset.tex
@@ -43,11 +43,19 @@ A basic GA was used in this experiment. The system parameters used during the ex
 
 \begin{table}
 	\centering
-	\begin{tabular}{ | >{\bfseries}p{2cm} | p{1cm} | p{1cm} | p{1cm} | p{1cm} | p{1cm} | p{1cm} | p{1cm} | p{1cm} | p{1cm} | }
+	\begin{tabular}{ | >{\bfseries}p{2cm} | p{1cm} | p{1cm} | p{1cm} | p{1cm} | p{1cm} | }
 		\hline
-		Exp. Set & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 \\ \hline
-		Flexible Atoms & Mn, Ca, C, O, N, H & Mn, Ca, C, O, N & Mn, Ca, C & Mn, Ca, O & Mn, Ca, N & Mn, Ca, C, O & Mn, Ca, C, N & Mn, Ca, O, N & Mn, Ca \\ \hline
-		Rigid Atoms &  & H & H, N, O & H, N, C & H, C, O & H, N & H, O & H, C & H, C, O, N \\ \hline
+		Exp. Set & 1 & 2 & 3 & 4 & 5 \\ \hline
+		Flexible Atoms & Mn, Ca, C, O, N, H & Mn, Ca, C, O, N & Mn, Ca, C & Mn, Ca, O & Mn, Ca, N \\ \hline
+		Rigid Atoms &  & H & H, N, O & H, N, C & H, C, O \\ \hline
+	\end{tabular}
+	\\
+	\vspace{3 mm}
+	\begin{tabular}{ | >{\bfseries}p{2cm} | p{1cm} | p{1cm} | p{1cm} | p{1cm} | }
+		\hline
+		Exp. Set & 6 & 7 & 8 & 9 \\ \hline
+		Flexible Atoms & Mn, Ca, C, O & Mn, Ca, C, N & Mn, Ca, O, N & Mn, Ca \\ \hline
+		Rigid Atoms & H, N & H, O & H, C & H, C, O, N \\ \hline
 	\end{tabular}
 	\caption{Experiments with different subsets}
 	\label{table:subset-setup}
