--- a/doc/thesis/analysis/ga.tex
+++ b/doc/thesis/analysis/ga.tex
@@ -9,8 +9,10 @@ Table~\ref{table:basic-ga-results} and Table~\ref{table:rga-results} provide a s
 	\begin{tabular}{ | >{\bfseries}c | c | c | c | c | c | c | }
 		\hline
 		Experiment Set & 1 & 2 & 3 & 4 & 5 & 6 \\ \hline
-		Best RMSD & 1.2471 & 1.3315 & 1.1610 & 1.1880 & \textbf{1.1173} & 1.2287 \\ \hline
-		Average Best RMSD & 1.3448 & 1.3784 & 1.2792 & 1.3315 & \textbf{1.2626} & 1.3336 \\ \hline
+		% Best RMSD & 1.2471 & 1.3315 & 1.1610 & 1.1880 & \textbf{1.1173} & 1.2287 \\ \hline
+		% Average Best RMSD & 1.3448 & 1.3784 & 1.2792 & 1.3315 & \textbf{1.2626} & 1.3336 \\ \hline
+		Best RMSD & 1.2471 & 1.1880 & 1.1173 & 1.2349 & \textbf{1.0533} & 1.2287 \\ \hline
+		Averge Best RMSD & 1.3518 & 1.3610 & \textbf{1.2942} & 1.3658 & 1.3044 & 1.3294 \\ \hline
 	\end{tabular}
 	\caption{Basic GA Results}
 	\label{table:basic-ga-results}
@@ -18,12 +20,23 @@ Table~\ref{table:basic-ga-results} and Table~\ref{table:rga-results} provide a s
 
 \begin{table}
 	\centering
-	\begin{tabular}{ | >{\bfseries}c | c | c | c | c | c | c | }
+	\begin{tabular}{ | >{\bfseries}c | c | c | c | c | c | c | c | c | }
 		\hline
-		Experiment Set & 1 & 2 & 3 & 4 & 5 & 6 \\ \hline
-		Average Number of Generations & 67 & 81 & 107 & 124 & 67 & 81 \\ \hline
-		Best RMSD & 1.1297 & 1.1545 & 1.1132 & 1.0913 & \textbf{1.046} & 1.0953 \\ \hline
-		Average Best RMSD & 1.2281 & 1.2150 & 1.2095 & 1.2189 & \textbf{1.2031} & 1.2171 \\ \hline
+		Experiment Set & 1 & 2 & 3 & 4 \\ \hline
+		% Average Number of Generations & 67 & 81 & 107 & 124 & 67 & 81 \\ \hline
+		Avg. Num. Generations & 61 & 73 & 86 & 106 \\ \hline
+		Best RMSD & 1.1297 & 1.1174 & 1.0388 & \textbf{0.9649} \\ \hline
+		Average Best RMSD & 1.2532 & 1.2468 & 1.2252 & 1.2149 \\ \hline
+	\end{tabular}
+	\\
+	\vspace{3 mm}
+	\begin{tabular}{ | >{\bfseries}c | c | c | c | c | c | c | c | c | }
+		\hline
+		Experiment Set & 5 & 6 & 7 & 8 \\ \hline
+		% Average Number of Generations & 67 & 81 & 107 & 124 & 67 & 81 \\ \hline
+		Avg. Num. Generations & 72 & 83 & 100 & 133 \\ \hline
+		Best RMSD & 0.9992 & 1.0353 & 1.1170 & 1.0012 \\ \hline
+		Average Best RMSD & 1.1856 & \textbf{1.1808} & 1.2229 & 1.2119 \\ \hline
 	\end{tabular}
 	\caption{RGA Results}
 	\label{table:rga-results}
