--- a/doc/thesis/analysis/post-op.tex
+++ b/doc/thesis/analysis/post-op.tex
@@ -10,7 +10,9 @@ Table~\ref{table:post-op-de-results} and Table~\ref{table:post-op-pso-results} p
 	\begin{tabular}{ | >{\bfseries}c | c | c | c | }
 		\hline
 		Experiment Set & 1 & 2 \\ \hline
-		Average Best RMSD & 1.1386 &1.7267  \\ \hline
+		% Average Best RMSD & 1.1386 &1.7267  \\ \hline
+		Best RMSD & \textbf{0.9973} & 1.4118 \\ \hline
+		Average Best RMSD & \textbf{1.1386} & 1.7267 \\ \hline
 	\end{tabular}
 	\caption{Results of DE Post-Optimization}
 	\label{table:post-op-de-results}
@@ -21,7 +23,9 @@ Table~\ref{table:post-op-de-results} and Table~\ref{table:post-op-pso-results} p
 	\begin{tabular}{ | >{\bfseries}c | c | c | }
 		\hline
 		Experiment Set & 1 & 2 \\ \hline
-		Average Best RMSD & 0.9001 & 1.2445 \\ \hline
+		% Average Best RMSD & 0.9001 & 1.2445 \\ \hline
+		Best RMSD & \textbf{0.7977} & 0.9296 \\ \hline
+		Average Best RMSD & \textbf{0.9001} & 1.2445 \\ \hline
 	\end{tabular}
 	\caption{Results of PSO Post-Optimization}
 	\label{table:post-op-pso-results}
