--- a/doc/thesis/experimental-design/ea.tex
+++ b/doc/thesis/experimental-design/ea.tex
@@ -12,12 +12,21 @@ Representation 1 (See Subsection~\ref{subsec:encoding-1}) was chosen as the indi
 
 \begin{table}
 	\centering
-	\begin{tabular}{ | >{\bfseries}c | c | c | c | c | c | c | c | c | c | c | c | c | }
+	\begin{tabular}{ | >{\bfseries}c | c | c | c | c | c | c | }
 		\hline
-		Exp. Set & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & 10 & 11 & 12 \\ \hline
-		Pop. Size & 50 & 50 & 50 & 50 & 50 & 50 & 100 & 100 & 100 & 100 & 100 & 100 \\ \hline
-		Gens. & 100 & 100 & 100 & 250 & 250 & 250 & 100 & 100 & 100 & 250 & 250 & 250 \\ \hline
-		Velocity & 0.01 & 0.05 & 0.1 & 0.01 & 0.05 & 0.1 & 0.01 & 0.05 & 0.1 & 0.01 & 0.05 & 0.1 \\ \hline
+		Exp. Set & 1 & 2 & 3 & 4 & 5 & 6 \\ \hline
+		Pop. Size & 50 & 50 & 50 & 50 & 50 & 50 \\ \hline
+		Gens. & 100 & 100 & 100 & 250 & 250 & 250 \\ \hline
+		Velocity & 0.01 & 0.05 & 0.1 & 0.01 & 0.05 & 0.1 \\ \hline
+	\end{tabular}
+	\\
+	\vspace{3 mm}
+	\begin{tabular}{ | >{\bfseries}c | c | c | c | c | c | c | }
+		\hline
+		Exp. Set & 7 & 8 & 9 & 10 & 11 & 12 \\ \hline
+		Pop. Size & 100 & 100 & 100 & 100 & 100 & 100 \\ \hline
+		Gens. & 100 & 100 & 100 & 250 & 250 & 250 \\ \hline
+		Velocity & 0.01 & 0.05 & 0.1 & 0.01 & 0.05 & 0.1 \\ \hline
 	\end{tabular}
 	\caption{System parameters for the PSO runs}
 	\label{table:ea-pso}
