--- a/doc/thesis/experimental-design/post-op.tex
+++ b/doc/thesis/experimental-design/post-op.tex
@@ -3,7 +3,7 @@
 
 \subsection{Purpose}
 
-The purpose of this study is to improve upon the results found in the study discussed in Section~\ref{sec:ga-viability}. The results of the GA viability experiment suggested that the candidate solutions found could be improved upon. Two evolutionary algorithms, differential evolution, and particle swarm optimization, were chosen to perform a local search of the search space to locate improved candidate solutions. These algorithms were selected based on their success with continuous space problems.
+The purpose of this study is to improve upon the results found in the study discussed in Section~\ref{sec:ga-experiment}. The results of the GA viability experiment suggested that the candidate solutions found could be improved upon. Two evolutionary algorithms, differential evolution, and particle swarm optimization, were chosen to perform a local search of the search space to locate improved candidate solutions. These algorithms were selected based on their success with continuous space problems.
 
 \subsection{Population}
 
@@ -14,7 +14,7 @@ The initial population for the DE, and PSO were generated using the random gener
 
 \subsection{System Parameters}
 
-Two evolutionary algorithms were used in this experiment: DE, and PSO. The system parameters for the DE can be seen in Table~\ref{table:post-op-de}, and the system parameters for the PSO can be seen in Table~\ref{table:post-op-pso}. The \textit{initial movement radius} shown in the system parameters tables defines the \textit{user defined range} that was used to generate the initial population. The fitness function used for the DE, and PSO is defined in Subsection~\ref{sec:fitness-exafs}.
+Two algorithms were used in this experiment: DE, and PSO. The system parameters for the DE can be seen in Table~\ref{table:post-op-de}, and the system parameters for the PSO can be seen in Table~\ref{table:post-op-pso}. The \textit{initial movement radius} shown in the system parameters tables defines the \textit{user defined range} that was used to generate the initial population. The fitness function used for the DE, and PSO is defined in Subsection~\ref{sec:fitness-exafs}.
 
 An alternative individual representation was used for this experiment. DE, and PSO are algorithms that are better suited for problems that can be represented as a vector of real numbers. The individual representation that was used in the GA viability experiment was translated into a vector of real numbers (See Subsection~\ref{subsec:encoding-2}).
 
