--- a/doc/thesis/experimental-design/ea.tex
+++ b/doc/thesis/experimental-design/ea.tex
@@ -2,7 +2,7 @@
 
 \subsection{Purpose}
 
-The purpose of this study is to determine how well DE, and PSO perform on the structure refinement problem. In Section~\ref{sec:ga-post-op} DE, and PSO were used as a post-optimization of the results found in Section~\ref{sec:ga-viability}. In this study DE, and PSO will be more directly compared with the algorithms used in Section~\ref{sec:ga-experiment}.
+The purpose of this study is to determine how well DE, and PSO perform on the structure refinement problem. In Section~\ref{sec:ga-post-op} DE, and PSO were used as a post-optimization of the results found in Section~\ref{sec:ga-experiment}. In this study DE, and PSO will be more directly compared with the algorithms used in Section~\ref{sec:ga-experiment}.
 
 \subsection{Population}
 
