--- a/doc/thesis/analysis/ea.tex
+++ b/doc/thesis/analysis/ea.tex
@@ -34,19 +34,15 @@ Table~\ref{table:ea-de-results} and Table~\ref{table:ea-pso-results} provide a s
 	\label{table:ea-pso-results}
 \end{table}
 
-
-% After the success of the PSO exper viewing the results from the DE, and PSO experiments in Section~\ref{sec:post-op-analysis} these algorithms were suspected to perform well on the structure refinement problem.
-
-% Comparing the results of the DE, and PSO with the results of the GA, and RGA one would notice that the search algorithms that operated on a continuous space performed better than the discrete algorithms.
-
 The DE, and PSO experiments performed very well on the structure refinement problem. These algorithms were able to succeed in finding better candidate solutions to the problem than the results from the RGA in Section~\ref{sec:ga-analysis} and the PSO in Section~\ref{sec:post-op-analysis}.
 
 Mann-Whitney U tests were performed on the results of the DE, and PSO experiment sets. The results from testing only the PSO experiment set revealed that there were two clear statistical groupings. The two groups consisted of the experiments with a generation count of 100, and the experiments with a generation count of 200. The results within these two groups had no statistical difference but the group with a higher generation count performed statistically better than the other group. Modifying the initial velocity speeds had little statistical affect on the solutions. The results of the DE showed the same outcomes. Two statistical groups formed from the experiments that had the same number of generations. The experiments with the greater number of generations performed statistically better than the other group.
 
 The two experiment sets shared exactly the same statistical conclusions. The population sizes had no affect on the results of the experiments. The experiments with a population size of 50 performed statistically the same as the ones with a population size of 100. This characteristic could be caused by the method at which the populations are initialized. The molecular dynamic simulation causes the individual atoms to oscillate back and forth. The individuals used in the initial populations may have been similar enough that there was some overlap in the search space. Having two statistical groups forming around the number of generations only makes sense. The group with the greater generation count was allowed more time to explore the search space.
 
+Mann-Whitney U tests were also performed on the results of the DE, and PSO experiment sets, and also the experiment sets from the RGA in Section~\ref{sec:ga-analysis}. The tests showed that PSO performed statistically better than DE, and RGA performed statistically worse than DE, and PSO. These results were actually not that surprising considering the results from the analysis done in Section~\ref{sec:post-op-analysis} showed that PSO worked well on the structure refinement problem.
 
-
+Figure~\ref{fig:pso-best} demonstrates one of the best candidate solutions. It can be seen that the candidate solution has produced an EXAFS spectrum that is a close approximation of the experimental EXAFS spectrum. The remaining differences in the EXAFS spectra many be due to errors in the experimental EXAFS spectrum.
 
 \begin{figure*}
 	\centering
@@ -68,5 +64,7 @@ The two experiment sets shared exactly the same statistical conclusions. The pop
 		\end{axis}
 	\end{tikzpicture}
 	\caption{OEC EXAFS Spectra Comparison}
-	\label{fig:bestRunEXAFS}
+	\label{fig:pso-best}
 \end{figure*}
+
+The results found in this section indicate that algorithms that operate on a continuous space perform better than those that use a more discrete search space. We suspect that this may be true only for smaller search spaces. The complex analyzed in this work is relatively small with only 79 atoms required for EXAFS spectra comparison. If one was attempting to optimize the EXAFS spectrum and the force fields involved, the search space would grow to 1269 atoms. This is an exponential increase is degrees of freedom. In this case a genetic algorithm may be better suited.
