--- a/doc/thesis/abstract.tex
+++ b/doc/thesis/abstract.tex
@@ -1,6 +1,9 @@
 \thispagestyle{empty}
 \section*{Abstract}
 \begin{doublespace}
-Experimental Extended X-ray Absorption Fine Structure (EXAFS) spectra carry information about the chemical structure of metal protein complexes. However, predicting the structure of such complexes from EXAFS spectra is not a simple task. Currently methods such as Monte Carlo Optimization or simulated annealing are used in structure refinement of EXAFS. These methods have proved somewhat successful in structure refinement but have not been successful in finding the global minima. Evolutionary algorithms have had success in overcoming local minima issues in other domains. We propose the use of three different approaches to better predict the structure of metal protein complexes: genetic algorithm (GA), particle swarm optimization (PSO), and differential evolution (DE).
+Experimental Extended X-ray Absorption Fine Structure (EXAFS) spectra carry information about the chemical structure of metal protein complexes. However, predicting the structure of such complexes from EXAFS spectra is not a simple task. Currently methods such as Monte Carlo Optimization or simulated annealing are used in structure refinement of EXAFS. These methods have proved somewhat successful in structure refinement but have not been successful in finding the global minima.
+
+Multiple population based algorithms, including genetic algorithm, restarting genetic algorithm, differential evolution, and particle swarm optimization, are studied for their affectiveness in structure refinement of EXAFS. The oxygen-evolving complex in S$_{1}$ is used as a benchmark for comparing the algorithms. These algorithms were successful in finding new atomic structures that produced improved calculated EXAFS spectra over atomic structures previously found.
+
 \end{doublespace}   
 
